fix: fix The debug console and the left outline style are not aligned

--- a/packages/debug/src/browser/view/console/debug-console.module.less
+++ b/packages/debug/src/browser/view/console/debug-console.module.less
@@ -1,4 +1,4 @@
-@debug-console-default-height: 23.5px;
+@debug-console-default-height: 23px;
 
 .debug_console {
   width: 100%;
